--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,84 @@ Green: #00B172
 White: #FFF
 
 */
+body{
+    margin: 0;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-content: center;
+    background-color: #FFF;
+    color: 1A1A1A;
+    width: 100vw;
+    position: fixed;
+}
+
+.navbar ul{
+    list-style: none;
+    display: flex;
+}
+
+.navbar-logo{
+    display: flex;
+    width: 10rem;
+}
+
+
+.intro{
+    background: url('../images/landing.jpg');
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.intro h1{
+    color: 1A1A1A;
+}
+
+#features{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#features div {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#features h2{
+    display: flex;
+    border-bottom: 3rem, #00B172;
+}
+
+#features h3{
+    color: #00B172;
+}
+
+.features-img{
+    height: 5rem;
+}
+
+#utilities {
+    background-color: #00B172;
+    color: 1A1A1A;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 75vh;
+}
+
+.logo{
+    height: 25vh;
+    position: absolute;
+    align-items: center;
+}
+.promotion{
+    height: 50vh;
+}
